keruta/dev/sandbox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kigawa-net-keruta-dev-sandbox
