keruta/dev/keruta-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-dev-admin
  namespace: kigawa-net-keruta-dev
  labels:
    app: keruta-dev-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-dev-admin
  template:
    metadata:
      name: keruta-dev-admin
      labels:
        app: keruta-dev-admin
    spec:
      containers:
        - name: keruta-dev-admin
          image: harbor.kigawa.net/library/keruta-admin:develop-35fce4b202af94c504496324e1766789443d3dd1
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 3000
              path: /
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
