keruta/dev/keruta-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-dev
  namespace: kigawa-net-keruta-dev
  labels:
    app: keruta-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-dev
  template:
    metadata:
      name: keruta-dev
      labels:
        app: keruta-dev
    spec:
      serviceAccountName: keruta-dev-sa
      containers:
        - name: keruta-dev
          image: harbor.kigawa.net/library/keruta-api:develop-c5c10f012041b1718d5be987bee14d60181a53c4
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8080
              path: /api/v1/health
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
