keruta/dev/keruta-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-dev-executor
  namespace: kigawa-net-keruta-dev
  labels:
    app: keruta-dev-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-dev-executor
  template:
    metadata:
      name: keruta-dev-executor
      labels:
        app: keruta-dev-executor
    spec:
      serviceAccountName: keruta-dev-sa
      containers:
        - name: keruta-dev-executor
          image: harbor.kigawa.net/library/keruta-executor:main-5411030880b7998462ec1468c47e181c19d9f17e
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
