keruta/dev/keruta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-dev
  namespace: kigawa-net-keruta-dev
  labels:
    app: keruta-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-dev
  template:
    metadata:
      name: keruta-dev
      labels:
        app: keruta-dev
    spec:
      serviceAccountName: keruta-dev-sa
      containers:
        - name: keruta-dev
          image: harbor.kigawa.net/library/keruta:main-e93f12247af02a41a262da17ccdbc5633d032f3c
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8080
              path: /api/v1/health
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
