keruta/dev/ktcl-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ktcl-k8s-dev
  namespace: kigawa-net-keruta-dev
  labels:
    app: ktcl-k8s-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ktcl-k8s-dev
  template:
    metadata:
      name: ktcl-k8s-dev
      labels:
        app: ktcl-k8s-dev
    spec:
      serviceAccountName: keruta-dev-sa
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: ktcl-k8s-dev
          image: harbor.kigawa.net/private/ktcl-k8s:develop-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
              name: ktse
            - containerPort: 8081
              protocol: TCP
              name: web
      restartPolicy: Always
