keruta/dev/kicl-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kicl-web
  labels:
    app: kicl-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kicl-web
  template:
    metadata:
      name: kicl-web
      labels:
        app: kicl-web
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: kicl-web
          image: harbor.kigawa.net/private/kicl-web:460/merge-ac037a8bb471b95c40726cbaa627254643074f2f
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kicl-web
spec:
  selector:
    app: kicl-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
