keruta/dev/ktcl-k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ktcl-k8s-dev-svc
  namespace: kigawa-net-keruta-dev
spec:
  selector:
    app: ktcl-k8s-dev
  ports:
    - name: web
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: ktse
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
