keruta/dev/ktse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ktse
  labels:
    app: ktse
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ktse
  template:
    metadata:
      name: ktse
      labels:
        app: ktse
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: ktse
          image: harbor.kigawa.net/library/ktse:develop-5544f21458a80eceeeaca3db4b18f619882f8796
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 64
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ktse
spec:
  selector:
    app: ktse
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
