keruta/dev/zk-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zk-svc
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: zk-pod
  ports:
    - name: client
      port: 2181
    - name: server
      port: 2888
    - name: leader-election
      port: 3888
